upload events lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,14 +16,23 @@ functions:
     handler: bin/main
     events:
       - http:
-        method: GET
-        path: /health
-      - http:
           method: GET
-          path: /list
+          path: /list 
+
+  health:
+    handler: bin/main
+    events:
       - http:
-        method: POST
-        path: /upload
+          method: GET 
+          path: /health
+
+  upload:
+    handler: bin/main
+    events:
+     - http:
+          method: POST
+          path: /upload
+
 package:
   patterns:
     - '!*/**'
